--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: var(--menu-bkgcolor);
     color: var(--main-text-color);
     font-family: 'Merriweather';
@@ -8,3 +8,20 @@ body {
     flex-direction: column;
     align-items: center;
 }
+canvas {
+    
+}
+#canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  #content {
+    position: relative;
+    z-index: 1;
+    /* Add your desired styling for the content */
+  }
