--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 h1{
+  text-align: center;
 }
 
 #canvas {
@@ -25,16 +26,17 @@ h1{
   #content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     position: relative;
     z-index: 1;
+    min-height: 100%;
+    min-width:50%;
   }
 
 #search {
-  position: fixed;
-  bottom: 4vw;
   display: inherit;
   justify-self: end;
+  margin: 0 auto 4vw auto;
   height: 3rem;
   min-width: 3rem;
   max-height: 5rem;
@@ -46,24 +48,39 @@ h1{
   transition: max-height 2.5s ease-out, padding 2s, ease-out;
 }
 
-#search > input {
+#search input {
   margin-top: .1vw;
   padding: .2vw;
   font-size: 0;
   overflow: hidden;
   background: #ffffff56;
+  height:0;
+  width:0;
   border: 0;
+  border-radius: 50px;
   opacity: 0;
   /* transition: opacity .5s ease-in-out; */
-  width: calc(100% - 2.25rem); /* Adjusted width to account for padding */
+  outline: none;
+  text-align: center;
+  color: whitesmoke;
 }
 
 #search:hover input {
   border: 1px solid rgba(129, 129, 129, 0.656);
   padding: .8vw;
   margin-left: 1vw;
+  width: calc(100% - 2.25rem); /* Adjusted width to account for padding */
   font-size: 1rem;
-  border-radius: 30%;
-  transition: border .5s ease-in, padding .5s ease-in, font-size .5s ease-in, opacity 1s ease-in-out;
+  opacity: 1;
+  transition: border .5s ease-in, font-size .5s ease-in, opacity 1s ease-in-out;
+}
+
+#search:focus-within input {
+  border: 1px solid rgba(0, 213, 255, 0.656);
+  padding: .8vw;
+  width: calc(100% - 2.25rem); /* Adjusted width to account for padding */
+  margin-left: 1vw;
+  font-size: 1rem;
   opacity: 1;
 }
+/* padding .5s ease-in,*/
