--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body {
     height: 100vh;
     width: 100vw;
@@ -5,13 +17,82 @@ body {
     color: var(--main-text-color);
     font-family: 'Merriweather';
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    /* background-image: url(../images/sunny-clear.png); */
 }
 
+#page {
+  display: flex;
+  flex-direction: row;
+}
+
+#forecast {
+  min-width: var(--forecast-minwidth);
+  height: var(--forecast-height);
+  background-color: var(--forecast-bkgcolor);
+}
+.forecast-card {
+  background-color: var(--forecast-card-bkgcolor);
+  min-width: var(--forecast-card-minwidth)
+}
+header {
+  justify-self: stretch;
+  width: var(--header-width);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#title-header {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  margin-left: var(--title-header-marginleft);
+}
+
+#crystal-ball {
+  padding-top: var(--crystalball-paddingtop);
+  height: var(--crystalball-height);
+
+}
 h1{
   text-align: center;
+  align-self: flex-start;
+  font-size: var(--h1-textsize);
+  width: var(--h1-width);
+  padding: var(--h1-padding);
+  background-color: var(--h1-bkgcolor);
+  border: solid var(--h1-bordersize); 
+  border-radius: var(--h1-border-radius);
+  text-shadow: var(--base-textshadow)
+}
+
+.info {
+  margin-right: var(--info-marginright);
+  opacity: 1;
+}
+
+#info-display {
+  animation: fadeIn ease-in 6s;
+  min-width: 12.5vw;
+  display: flex;
+  flex-direction: column;
+  align-self: start;
+  margin: var(--info-display-margin);
+  text-shadow: var(--info-textshadow);
+}
+
+#selection {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: var(--selection-width);
+  height: var(--selection-height);
+}
+
+#navigation {
+  display:flex;
+  flex-direction: column;
 }
 
 #canvas {
@@ -21,66 +102,100 @@ h1{
     z-index: -1;
     height: 100vh;
     width: 100vw;
-  }
+}
 
-  #content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    z-index: 1;
-    min-height: 100%;
-    min-width:50%;
-  }
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  z-index: 1;
+  min-height: 100%;
+  min-width: var(--content-minwidth);
+}
 
 #search {
   display: inherit;
-  justify-self: end;
-  margin: 0 auto 4vw auto;
-  height: 3rem;
-  min-width: 3rem;
-  max-height: 5rem;
+  justify-self: center;
+  margin: var(--search-margin);
+  height: var(--search-height);
+  padding-left: var(--search-paddingleft);
+  min-width: var(--search-minwidth);
+  max-height: var(--search-minheight);
   background-image: url(../images/icons/search.png);
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: left center;
-  padding-left: 2.25rem;
   transition: max-height 2.5s ease-out, padding 2s, ease-out;
 }
 
+
 #search input {
-  margin-top: .1vw;
-  padding: .2vw;
+  margin: var(--searchinput-margin);
+  padding: var(--searchinput-padding);
   font-size: 0;
   overflow: hidden;
-  background: #ffffff56;
+  background: var(--searchinput-bkgcolor);
   height:0;
   width:0;
   border: 0;
-  border-radius: 50px;
+  border-radius: var(--searchinput-border-radius);
   opacity: 0;
   /* transition: opacity .5s ease-in-out; */
   outline: none;
   text-align: center;
-  color: whitesmoke;
+  color: var(--searchinput-text-color);
+  transition: border .5s ease-in, font-size .5s ease-in, opacity 1s ease-in-out, width .5s ease-in-out, height 1s ease-in-out;
 }
 
 #search:hover input {
-  border: 1px solid rgba(129, 129, 129, 0.656);
-  padding: .8vw;
-  margin-left: 1vw;
-  width: calc(100% - 2.25rem); /* Adjusted width to account for padding */
-  font-size: 1rem;
-  opacity: 1;
-  transition: border .5s ease-in, font-size .5s ease-in, opacity 1s ease-in-out;
+  border: var(--searchinput-hover-border);
+  padding: var(--searchinput-hover-padding);
+  margin-left: var(--searchinput-hover-marginleft);
+  width: var(--searchinput-hover-width); /* Adjusted width to account for padding */
+  max-height: var(--searchinput-hover-maxheight);
+  height: var(--searchinput-hover-height);
+  font-size: var(--searchinput-hover-textsize);
+  opacity: var(--searchinput-hover-opacity);
 }
 
 #search:focus-within input {
-  border: 1px solid rgba(0, 213, 255, 0.656);
-  padding: .8vw;
-  width: calc(100% - 2.25rem); /* Adjusted width to account for padding */
-  margin-left: 1vw;
-  font-size: 1rem;
-  opacity: 1;
+  border: var(--search-focuswithin-border);
+  padding: var(--search-focuswithin-padding);
+  width: var(--search-focuswithin-width); /* Adjusted width to account for padding */
+  max-height: var(--search-focuswithin-maxheight);
+  height: var(--search-focuswithin-height);
+  margin-left: var(--search-focuswithin-marginleft);
+  font-size: var(--search-focuswithin-textsize);
+  opacity: var(--search-focuswithin-opacity);
 }
 /* padding .5s ease-in,*/
+
+
+.gallery {
+  width: var(--gallery-width);
+  height: var(--gallery-height);
+  background-color: var(--gallery-bkgcolor);
+  border-radius: var(--gallery-border-radius);
+  justify-content: center;
+}
+
+
+.gallery-cell {
+  width: var(--gallerycell-width);
+  height: var(--gallerycell-height);
+  background: var(--gallerycell-bkgcolor);
+  counter-increment: gallery-cell;
+  text-shadow: var(--info-textshadow);
+  padding: var(--gallerycell-padding);
+}
+/* 
+cell number */ */
+.gallery-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: var(--gallerycell-lineheight);
+  font-size: var(--gallerycell-textsize);
+  color: var(--gallerycell-textcolor);
+}
