all criteria met besides cleanup and comment/readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,9 @@ h1{
   text-shadow: var(--info-textshadow);
 }
 
+.weather-icon-main {
+  padding-right: 2vw;
+}
 #selection {
   display:flex;
   flex-direction: column;
