--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     background-color: var(--menu-bkgcolor);
     color: var(--main-text-color);
     font-family: 'Merriweather';
+    position: fixed;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -120,7 +121,7 @@ h1{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 0;
     height: 100vh;
     width: 100vw;
 }
