--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,33 @@ cell number */ */
   }
 }
 /*Small devices (portrait tablets and large phones, 600px and up)*/
-@media only screen and (min-width: 600px) {...}
+@media only screen and (min-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+  #title-header {
+    margin-left: 0;
+    margin-right: calc(30vw - var(--forecast-minwidth));
+  }
+  #info-display {
+    padding-left: calc(20vw - var(--forecast-minwidth));
+    margin-top: 15vh;
+  }
+  #forecast {
+    margin-right: 0;
+  }
+  .forecast-card {
+    font-size: 2.25vw
+  }
+  .gallery, .flickity-viewport {
+    height: 7.5vh;
+    margin-bottom: 5vh;
+  }
+  #navigation{
+  margin-left: 0;
+  padding: 0;
+  }
+}
 /* Medium devices (landscape tablets, 768px and up)*/
 @media only screen and (min-width: 768px) {...}
 /* Large devices (laptops/desktops, 992px and up)*/
